--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; URL='https://t.me/+WbkMAuq5ZssxZDRh'" />
+    <script>
+      window.location.replace("https://t.me/+WbkMAuq5ZssxZDRh");
+    </script>
   </head>
   <body>
     <p>Redirecionando...</p>
