--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-      window.location.replace("https://t.me/+WbkMAuq5ZssxZDRh");
-    </script>
+    <meta http-equiv="refresh" content="0; URL='https://t.me/+WbkMAuq5ZssxZDRh'" />
   </head>
   <body>
     <p>Redirecionando...</p>
