--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://t.me/+WbkMAuq5ZssxZDRh'" />
+    <meta http-equiv="refresh" content="0; URL='https://t.me/+RcsWnDXH0eQ3OWU0'" />
     <script>
-      window.location.replace("https://t.me/+WbkMAuq5ZssxZDRh");
+      window.location.replace("https://t.me/+RcsWnDXH0eQ3OWU0");
     </script>
   </head>
   <body>
