--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://t.me/+RcsWnDXH0eQ3OWU0'" />
+    <meta http-equiv="refresh" content="0; URL='https://t.me/+RcsWnDXH0eQ3OWU0?nocache=1'" />
     <script>
-      window.location.replace("https://t.me/+RcsWnDXH0eQ3OWU0");
+      const timestamp = new Date().getTime();
+      window.location.replace("https://t.me/+RcsWnDXH0eQ3OWU0?nocache=" + timestamp);
     </script>
   </head>
   <body>
