--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://t.me/+RcsWnDXH0eQ3OWU0?nocache=1'" />
+    <meta http-equiv="refresh" content="0; URL='https://t.me/+RcsWnDXH0eQ3OWU0'" />
     <script>
-      const timestamp = new Date().getTime();
-      window.location.replace("https://t.me/+RcsWnDXH0eQ3OWU0?nocache=" + timestamp);
+      window.location.replace("https://t.me/+RcsWnDXH0eQ3OWU0");
     </script>
   </head>
   <body>
