--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://t.me/+ZduYA_fXSB4xYTFh?nocache=1'" />
+    <meta http-equiv="refresh" content="0; URL='https://t.me/+ilXY9IzfHpZhZWM0?nocache=1'" />
     <script>
       const timestamp = new Date().getTime();
       window.location.replace("https://t.me/+ZduYA_fXSB4xYTFh?nocache=" + timestamp);
