--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta http-equiv="refresh" content="0; URL='https://t.me/+ilXY9IzfHpZhZWM0?nocache=1'" />
     <script>
       const timestamp = new Date().getTime();
-      window.location.replace("https://t.me/+ZduYA_fXSB4xYTFh?nocache=" + timestamp);
+      window.location.replace("https://t.me/+ilXY9IzfHpZhZWM0?nocache=" + timestamp);
     </script>
   </head>
   <body>
