--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://t.me/+ilXY9IzfHpZhZWM0?nocache=1'" />
+    <meta http-equiv="refresh" content="0; URL='https://t.me/+A3Dx5BBwq-ExM2M5?nocache=1'" />
     <script>
       const timestamp = new Date().getTime();
-      window.location.replace("https://t.me/+ilXY9IzfHpZhZWM0?nocache=" + timestamp);
+      window.location.replace("https://t.me/+A3Dx5BBwq-ExM2M5?nocache=" + timestamp);
     </script>
   </head>
   <body>
